minor UI changes

--- a/src/webparts/backToTop/BackToTopWebPart.manifest.json
+++ b/src/webparts/backToTop/BackToTopWebPart.manifest.json
@@ -19,7 +19,8 @@
       "scrollHeight": 50,
       "positionX": 95,
       "positionY": 2,
-      "scrollBehavior": "auto"
+      "scrollBehavior": "auto",
+      "buttonSize": 10
     }
   }]
 }
